configmaptest-nginx-volume-env.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: config-test
  name: config-test
spec:
  containers:
  - image: nginx:latest
    name: nginx
    volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: html-configmap
      - mountPath: /etc/nginx/conf.d/default.conf
        name: config-configmap
        subPath: default.conf

  volumes:
    - name: html-configmap
      configMap:
        name: nginx-html
    - name: config-configmap
      configMap:
        name: nginx-config
