confluence-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: confluence
  name: confluence
spec:
  containers:
  - image: atlassian/confluence:8.5.6
    name: confluence
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
