pv-dynamic-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-dynamic-nginx
spec:
  containers:
    - image: nginx:latest
      name: nginx
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: pv-volume
  volumes:
  - name: pv-volume
    persistentVolumeClaim:
      claimName: dynamic-volume
