secrettest-nginx-volume-env.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: secret-test
  name: secret-test
spec:
  containers:
  - image: nginx:latest
    name: nginx
    volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: html-secret
      - mountPath: /etc/nginx/conf.d/default.conf
        name: config-secret
        subPath: default.conf

  volumes:
    - name: html-secret
      secret:
        secretName: nginx-html
    - name: config-secret
      secret:
        secretName: nginx-config
