servicetest-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: servicetest-nginx
  name: servicetest-nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: servicetest-nginx
  strategy:
     type: RollingUpdate
  template:
    metadata:
      labels:
        app: servicetest-nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: www-root
      volumes:
        - name: www-root
          emptyDir: {}
