volume-nfs-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-nginx
spec:
  containers:
    - image: nginx:latest
      name: nginx
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html-volume
  volumes:
    - name: html-volume
      nfs:
        server: 10.252.0.214
        path: /utest/nfs-nginx
