servicetest-nginx-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: servicetest-nginx
  name: service-test-clusterip
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: servicetest-nginx
