servicetest-nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: servicetest-nginx
  name: service-test-nodeport
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: servicetest-nginx
