servicetest-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicetest-nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: servicetest.testurl.net
    http:
      paths:
      - backend:
          service:
            name: service-test-clusterip
            port:
              number: 80
        path: /
        pathType: Prefix
